# climate-data

./: .gitignore  README.md  docker-bake.hcl  docker-compose.yml  env.example  pyproject.toml
.github/workflows/: messageBuilder.js  publish.yaml
api/: process.py  server.py  settings.py
api/dataset/: job_queue.py  metadata.py  models.py  remote.py  storage.py  terarium_hmi.py
api/preview/: render.py
api/processing/: filters.py
api/processing/providers/: era5.py  esgf.py
api/search/: esgf.py  provider.py
api/search/providers/: era5.py  esgf.py
docker/jupyter/: Dockerfile
docker/minio/: Dockerfile
docker/server/: Dockerfile
