[tool.poetry]
name = "climate-data"
version = "0.1.0"
description = ""
authors = ["Satchel Baldwin <satchel@jataware.com>"]
readme = "README.md"
packages = [{include = "api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.1.4"
matplotlib = "^3.8.2"
xarray = "^2023.12.0"
numpy = "^1.26.2"
scipy = "^1.11.4"
netcdf4 = "^1.6.5"
pydap = "^3.4.1"
zarr = "^2.16.1"
cftime = "^1.6.3"
iris = "^1.0.7"
bottleneck = "^1.3.7"
numbagg = "^0.6.7"
dask = "^2023.12.0"
seaborn = "^0.13.0"
nc-time-axis = "^1.4.1"
boto3 = "^1.33.11"
esgf-pyclient = "^0.3.1"
s3fs = "^2023.12.2"
h5netcdf = "^1.3.0"
openai = "^1.3.9"
fastapi = "^0.105.0"
pydantic = "^2.5.2"
uvicorn = "^0.24.0.post1"
pydantic-settings = "^2.1.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
jupyterlab = "^4.0.9"
jupyterlab-server = "^2.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
